# drf_p33_task

./: .env.example  .gitignore  TODO  pyproject.toml
apps/: admin.py  apps.py  filters.py  models.py  paginations.py  serializers.py  signals.py  urls.py  utils.py  views.py
apps/management/commands/: add_post.py  adds.py
apps/migrations/: 0001_initial.py  0002_alter_user_managers_alter_user_phone.py  0003_alter_cart_user.py
apps/models/: __init__.py  backend.py  base.py  managers.py  orders.py  products.py  users.py
apps/static/apps/css/: style.css
root/: settings.py  urls.py
templates/admin/: login.html
