[project]
name = "drf-p33"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "argon2-cffi>=25.1.0",
    "django>=5.2.6",
    "django-ckeditor-5>=0.2.18",
    "django-filter>=25.1",
    "django-jazzmin>=3.0.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.28.0",
    "faker>=37.6.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.1",
    "redis>=6.4.0",
]
